# predictive-maintenance-cmapss

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_eda.ipynb
scripts/: build_eda_notebook.py  evaluate_deep.py  evaluate_generalization.py  evaluate_tabular.py  evaluate_transformer.py  horizon_sweep.py  prepare_data.py  run_ensemble.py  run_full_ensemble.py  train_ai4i.py  train_deep.py  train_tabular.py  train_transformer.py  train_transformer_generalization.py
src/: config.py
src/data/: ai4i.py  load.py  preprocess.py  splits.py  windows.py
src/models/: deep.py  deep_training.py  deep_tuning.py  ensemble.py  evaluation.py  tabular.py  tuning.py
src/utils/: plotting.py  seeds.py
tests/: test_data_pipeline.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py
